# Safespace

./: .gitignore  frontend.py  main.py  pyproject.toml
backend/: ai_agent.py  main.py  tools.py
